<resources>
    <string name="app_name">zzbook</string>

    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_cover_desc">图书封面</string>

    <string name="formatBookshelfChapterSize">%1$d/%2$d章</string>
    <string name="text_messages">消息</string>
    <string name="text_my_tracks">我的足迹</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_settings">设置</string>
    <string name="text_day">白天</string>
    <string name="text_night">晚上</string>
    <string name="menu_search">搜索</string>
    <string name="text_search">搜索</string>
    <string name="hint_search">搜索书名、作者、分类</string>
    <string name="title_ranking">排行</string>
    <string name="title_about">关于我们</string>
    <string name="text_book_discount">优惠购买</string>
    <string name="text_book_free_read">免费阅读</string>
    <string name="text_book_add_bookshelf">加入书架</string>
    <string name="catalog">目录</string>
    <string name="title_account">账户</string>
    <string name="title_my_messages">我的消息</string>
    <string name="title_my_tracks">我的足迹</string>
    <string name="title_settings">设置</string>
    <string name="title_feedback">意见反馈</string>
    <string name="text_push">推送</string>
    <string name="text_clear_cache">清理缓存</string>
    <string name="text_close_ad">关闭广告</string>
    <string name="text_good_opinion">给个好评</string>
    <string name="text_welcome_page">欢迎页</string>
    <string name="text_no_image_mode">无图模式</string>
    <string name="text_wifi_auto_download">wifi下自动缓存</string>
    <string name="text_theme">主题</string>
    <string name="text_check_version">检查更新</string>
    <string name="text_brightness_control">亮度调节</string>

    <string name="card_content">这是一个来自 drakeet 独立开发的 纯纯打码 App 中的关于页面。\n\n纯纯打码 是一款专注打码的轻应用，包含功能：传统马赛克、毛玻璃效果、选区和手指模式打，更有创新型高亮打码和 LowPoly 风格马赛克。\n只为满足一个纯纯的打码需求，让打码也能成为一种赏心悦目。\n\n如今我将这个页面从这个精致的应用中抽离出来开源，和我一贯做的开源项目一样，仅仅是为了让更多人获得方便。它代码干净易读，布局清晰优雅，在尺寸方面花费了许多调整的时间。\n\n很高兴能够分享给大家！最后，为了展示在卡片中能够自动识别链接和支持链接，我粘贴了纯纯打码的下载地址，你可以尝试点击试试，谢谢：\n\nhttp://www.coolapk.com/apk/me.drakeet.puremosaic\n\nhttps://fir.im/puremosaic\n\n同时，在卡片中右下角预置了一个 Action 按钮，它可以被编辑文本和点击响应，我使用分享纯纯打码作为演示，你也可以尝试点击试试，谢谢！</string>
    <string name="share_content">分享一款应用：「纯纯打码」，可能是最好用的打码软件，支持传统马赛克、毛玻璃，以及手指、选区打码，更有创意型高亮打码、LowPoly 风格，轻巧漂亮，打码也能够成为一种赏心悦目，推荐：http://t.cn/RbRjE4u</string>
    <string name="text_avatar">头像</string>
    <string name="text_nickname">昵称</string>
    <string name="text_no_value">未填写</string>
    <string name="text_account">账号</string>
    <string name="text_modify_password">更改密码</string>
    <string name="text_no_bind">未绑定</string>
    <string name="text_wechat">微信</string>
    <string name="text_email">邮箱</string>
    <string name="hint_login_email">邮箱</string>
    <string name="hint_login_password">密码</string>
    <string name="text_have_account">我已有账户</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_create_account">创建账户</string>
    <string name="text_logout">退出</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="title_retrieve_password">重置密码</string>
    <string name="hint_input_email">请输入邮箱</string>
    <string name="text_send_verify">发送验证码</string>
    <string name="hint_input_verify_code">请输入验证码</string>
    <string name="text_confirm">确定</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_password_again">请再次输入密码</string>
    <string name="text_feedback_type">反馈类型</string>
</resources>
