<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lnybrave.zzbook.ui.activity.RetrievePasswordActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_input_email"
                style="@style/RetrievePassword.EditText"
                android:hint="@string/hint_input_email"
                android:inputType="textEmailAddress" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_send_verify"
                style="@style/RetrievePassword.Button"
                android:text="@string/text_send_verify" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                style="@style/RetrievePassword.EditText"
                android:hint="@string/hint_input_verify_code"
                android:inputType="number" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                style="@style/RetrievePassword.Button"
                android:text="@string/text_confirm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_step3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                style="@style/RetrievePassword.EditText"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword" />

            <EditText
                style="@style/RetrievePassword.EditText"
                android:hint="@string/hint_input_password_again"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_reset_password"
                style="@style/RetrievePassword.Button"
                android:text="@string/text_confirm" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
