<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lnybrave.zzbook.ui.activity.BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:drawableTop="@drawable/ic_book_add_bookshelf_img_selector"
                android:gravity="center_horizontal"
                android:paddingBottom="6dp"
                android:text="@string/text_book_add_bookshelf" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:background="@drawable/bg_book_free_read_img_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/text_book_free_read"
                    android:textSize="16sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="2"
                android:drawableTop="@drawable/ic_book_discount_img_selector"
                android:gravity="center_horizontal"
                android:paddingBottom="6dp"
                android:text="@string/text_book_discount" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
